update github action workflow

--- a/.github/workflows/onRelease.yml
+++ b/.github/workflows/onRelease.yml
@@ -1,7 +1,7 @@
 name: Release code to production
 on:
   push:
-    branches: [main]
+    branches: [master]
 
 jobs: 
   setup-databricks-workflow:
