--- a/.github/workflows/onMasterPullRequest.yaml
+++ b/.github/workflows/onMasterPullRequest.yaml
@@ -1,7 +1,7 @@
 name: Pull Request on main branch
 on:
   pull_request:
-    branches: [main]
+    branches: [master]
     types: [assigned, opened, synchronize, reopened]
 jobs:
   linting:
